# openmp-learning

./: .gitignore  CMakeLists.txt  README.md  main.c
