cmake_minimum_required(VERSION 3.13)
project(openmp_intel_learning C)

set(CMAKE_C_STANDARD 11)
find_package(OpenMP REQUIRED)
if(OPENMP_FOUND)
    message("OPENMP FOUND")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()
set(SOURCE_FILES main.c)
add_executable(openmp_intel_learning ${SOURCE_FILES})